<resources>
    <string name="app_name">iNews</string>
    <string name="thumnail">thumbnail</string>
    <string name="no_internet">Oops! No Internet\n please check your network connection</string>
    <string name="no_data_available">No data available</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_notifications_interval_label">Notify me</string>
    <string name="settings_notifications_interval_key" translatable="false">notify</string>
    <string name="settings_notifications_interval_default" translatable="false">@string/settings_notifications_interval_30min_value</string>


    <!-- Label for page size option [CHAR LIMIT=20] -->
    <string name="settings_min_page_label">Minimum Page size</string>
    <string name="settings_min_page_key" translatable="false">min_magnitude</string>
    <string name="settings_min_page_default" translatable="false">10</string>
    <string name="settings_min_page_summary">List Settings</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_value">relevance</string>
    <string name="settings_order_by_relevance_label">Relevance</string>

    <string name="settings_order_by_oldest_value">oldest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="search">Search</string>

    <string name="settings_show_images_label">Headline images</string>
    <string name="settings_show_images_key">show_images</string>
    <string name="settings_show_images_summary">Hide/show images in list</string>

    <string name="settings_show_images_author_label">Author images</string>
    <string name="settings_show_images_author_key">show_author_images</string>
    <string name="settings_show_images__author_summary">Hide/show author images in list</string>
    <string name="settings_show_notification_label">Show Notification</string>
    <string name="settings_show_notification_key">notification_key</string>
    <string name="settings_show_notification_summary_off">Currently No notification</string>
    <string name="settings_show_notification_summary_on">You have Notification</string>
    <string name="settings_show_notification_summary">Show/Hide Notifications</string>
    <string name="big_string_for_demo">US Open 2018, day one: Nadal, Serena and Murray through, Halep out – as it happened</string>

    <!--notification interval labels-->
    <string name="settings_notifications_interval_30min_label">Every 30 min</string>
    <string name="settings_notifications_interval_1hrs_label">Every hour</string>
    <!--notification interval values -->
    <string name="settings_notifications_interval_30min_value">18</string>
    <string name="settings_notifications_interval_1hrs_value">36</string>
    <string name="settings_notification_category_label">Notification Settings</string>
    <string name="settings_sort_story_label">Sort News Stories</string>
    <string name="settings_night_mode_key">night_mode</string>
    <string name="settings_night_mode_summary">Easy reading in night</string>
    <string name="settings_night_mode_label">Night Mode</string>
    <string name="settings_night_mode_summary_on">On</string>
    <string name="settings_night_mode_summary_off">Off</string>

</resources>
