<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">


    <PreferenceCategory android:title="Reading Mode">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/settings_night_mode_key"
            android:summary="@string/settings_night_mode_summary"
            android:summaryOff="@string/settings_night_mode_summary_off"
            android:summaryOn="@string/settings_night_mode_summary_on"
            android:title="@string/settings_night_mode_label" />
        />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/settings_min_page_summary"
        android:title="@string/settings_min_page_summary">

        <EditTextPreference
            android:defaultValue="@string/settings_min_page_default"
            android:inputType="numberDecimal"
            android:key="@string/settings_min_page_key"
            android:selectAllOnFocus="true"
            android:summary="@string/settings_min_page_summary"
            android:title="@string/settings_min_page_label" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/settings_show_images_key"
            android:summary="@string/settings_show_images_summary"
            android:title="@string/settings_show_images_label" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/settings_show_images_author_key"
            android:summary="@string/settings_show_images__author_summary"
            android:title="@string/settings_show_images_author_label" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_notification_category_label">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/settings_show_notification_key"
            android:summary="@string/settings_show_notification_summary"
            android:summaryOff="@string/settings_show_notification_summary_off"
            android:summaryOn="@string/settings_show_notification_summary_on"
            android:title="@string/settings_show_notification_label" />

        <ListPreference
            android:defaultValue="@string/settings_notifications_interval_default"
            android:entries="@array/settings_notifications_interval_labels"
            android:entryValues="@array/settings_notifications_interval_value"
            android:key="@string/settings_notifications_interval_key"
            android:summary="@string/settings_notifications_interval_30min_label"
            android:title="@string/settings_notifications_interval_label" />
        />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_sort_story_label">

        <ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:summary="@string/settings_order_by_newest_value"
            android:title="@string/settings_order_by_label" />
    </PreferenceCategory>


</PreferenceScreen>